name:                mis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ahihi/mis#readme
license:             OtherLicense
license-file:        LICENSE
author:              Miranda Kastemaa
maintainer:          miranda@foldplop.com
copyright:           CC0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mis
  build-depends:       base >= 4.7 && < 5
                     , aeson == 1.1.*
                     , broadcast-chan == 0.1.*
                     , http-types == 0.9.*
                     , servant == 0.11.*
                     , servant-server == 0.11.*
                     , text == 1.2.*
                     , time == 1.6.*
                     , transformers == 0.5.*
                     , wai == 3.2.*
                     , wai-websockets == 3.0.*
                     , warp == 3.2.*
                     , websockets == 0.10.*
  default-language:    Haskell2010

executable mis-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mis
  default-language:    Haskell2010

test-suite mis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ahihi/mis
